[project]
name = "sample"
version = "0.1.0"
description = "Sample package for demonstrating Python library packaging using GitHub Actions"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
